# newtork_with_docker

./: .gitignore  Dockerfile  README.md  command.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
api/: __init__.py  admin.py  apps.py  models.py  schemas.py  serializers.py  tests.py  urls.py  views.py
api/management/: __init__.py
api/management/commands/: init_create_superuser.py
api/services/: __init__.py  mixins.py  model_operations.py  utils.py
bot/: __init__.py  config.yaml  logconfig.yaml  run_bot.py
bot/services/: __init__.py  bot.py  config.py  handlers.py  urls.py  utils.py
config/: settings.py  urls.py
messages/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
nginx/: Dockerfile  __init__.py
nginx/conf.d/: default.conf
tests/: __init__.py  conftest.py  manual_tests.py  settings.py
tests/api/: __init__.py  conftest.py  factories.py  test_serializers.py  test_tables.py  test_views.py
tests/api/services/: __init__.py  test_model_operations.py  test_utils.py
