[tool.poetry]
name = "social-network"
version = "0.1.0"
description = ""
authors = ["victro-nuzhniy <nuzhniyva@gmail.com>"]
readme = "README.md"
packages = [{include = "social_network"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "4.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
coreapi = "^2.3.3"
django-cors-headers = "^4.2.0"
djangorestframework-simplejwt = "^5.2.2"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
